# MLP

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  TrainNet.cu  TrainNet.cuh  TrainNet.h
Activations/: Activation1.cpp  Activation1.cu  Activation1.cuh  Activation1.h  CMakeLists.txt
Checker/: CMakeLists.txt  Checker.cpp
Nets/: CMakeLists.txt  Net1.cpp  Net1.h  NetData.h
Nets/Patterns/: Pattern1.cpp  Pattern1.h
Nets/Strides/: Stride1.cpp  Stride1.cu  Stride1.cuh  Stride1.h
Operations/: CMakeLists.txt  Clear.cu  Clear.cuh  VecAdd.cu  VecAdd.cuh
Propagators/: CMakeLists.txt  Propagator1.cu  Propagator1.cuh
RunNets/: CMakeLists.txt  RunNet1.cu  RunNet1.cuh
Unpacker/: CMakeLists.txt  Unpacker.cpp  Unpacker.h
